# Cpp

./: README.md
big_int/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing.cpp  main.cpp  victor.cpp  victor.h  victor_testing.cpp
copySearcher/: CMakeLists.txt  README.md  bigcomparer.cpp  bigcomparer.h  counter.cpp  counter.h  dirdemo.pro  file_hash.cpp  file_hash.h  filecollector.cpp  filecollector.h  filecomparer.cpp  filecomparer.h  filedeleter.cpp  filedeleter.h  filedistributor.cpp  filedistributor.h  fileworker.cpp  fileworker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
indexer/: CMakeLists.txt  counter.cpp  counter.h  indexer.pro  infilesearcher.cpp  infilesearcher.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  searcher.cpp  searcher.h  settings.cpp  settings.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  trigram.cpp  trigram.h  trigramcalcer.cpp  trigramcalcer.h  trigramworker.cpp  trigramworker.h
linked_ptr/: CMakeLists.txt  linked_ptr.h  main.cpp
persistent_set/: CMakeLists.txt  main.cpp  persistent_set.h  testing.cpp
